Fix postDownloads alignment.

--- a/main-800.css
+++ b/main-800.css
@@ -388,18 +388,7 @@ header::before {
 .fill .picture.three {
   background-position: -63vw center;
 }
-/* .fill .picture img {
-  position: absolute;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
-  float: left;
-  margin-top: 2em;
-  max-height: 300px;
-  transition: max-height 0.25s linear;
-  transition-delay: 0s;
-  opacity: 0;
-} */
+
 .reasons {
   position: absolute;
   top: 0;
@@ -558,10 +547,15 @@ header::before {
 }
 #postDownloads li {
   background: transparent;
-  width: 20%;
+  width: 30%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  flex-grow: bottom;
 }
 #postDownloads i {
   font-size: 2em;
+  margin-top: auto;
 }
 
 /* ========================================================================== */
